# bias_rs

./: .gitignore  README.md  action_plan.md  pyproject.toml
bias_rs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
configs/training/: ai_tod_v1.yaml  ai_tod_v2.yaml  defaults.yaml  dota_1024_v1.yaml  dota_1024_v15.yaml  hit_uav.yaml  hrsc2016_ms_640.yaml  plant_detection_640.yaml
scripts/data/: coco_obb_to_hbb.py  convert_supervisely_to_coco.py  inspect_coco_structure.py  patch_coco_tiles.py  patch_dota.py  process_aitod.py  process_dota.py  split_coco_stratified.py
src/: __init__.py
src/training/: __init__.py  __main__.py  base.py  cli.py  config.py  registry.py
src/training/backends/: ultralytics_backend.py
src/training/data/: __init__.py  coco_to_yolo.py
temp/: audit_training_configs.py  clean_annotations.py  image_size_stats.py  image_size_stats.txt  plot_coco_samples.py
